[gd_scene load_steps=11 format=3 uid="uid://bw3ts1s706vn4"]

[ext_resource type="Script" path="res://Scenes/AutoBattler/Enemy.gd" id="1_kfw1c"]
[ext_resource type="Texture2D" uid="uid://dkcrqbbgib0g1" path="res://Assets/enemy.jpg" id="2_utj41"]

[sub_resource type="CircleShape2D" id="CircleShape2D_egm63"]
radius = 70.0

[sub_resource type="SpriteFrames" id="SpriteFrames_q5ytw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_utj41")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a3ts"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_rhnfn"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_0a3ts")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvf5d"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sunxy"]
emission_shape = 1
emission_sphere_radius = 7.47
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 60, 0)
initial_velocity_min = 63.16
initial_velocity_max = 136.84
angular_velocity_min = 720.0
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
turbulence_noise_strength = 16.79

[sub_resource type="Gradient" id="Gradient_smqng"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h6gub"]
gradient = SubResource("Gradient_smqng")
width = 10
height = 10
fill = 1

[node name="Grandma" type="Area2D"]
top_level = true
z_index = 1
z_as_relative = false
position = Vector2(636, 368)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_kfw1c")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_egm63")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_q5ytw")
flip_h = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 10
anchor_right = 1.0
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -47.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_rhnfn")
theme_override_styles/fill = SubResource("StyleBoxFlat_lvf5d")
value = 100.0

[node name="HitTimer" type="Timer" parent="."]

[node name="BloodParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_sunxy")
texture = SubResource("GradientTexture2D_h6gub")
explosiveness = 0.11

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
